<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/auth"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.AuthFragment">

    <TextView
            android:id="@+id/tvAuthMainTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth_main_title"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btnAuthMainToLogin"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/auth_main_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAuthMainToLogin"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btnAuthMainToRegister"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintVertical_bias="0.982"/>
    <Button
            android:text="@string/auth_main_register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAuthMainToRegister"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
