<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/auth"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.RegisterFragment"
        android:layout_margin="@dimen/activity_margin">

    <TextView
            android:text="@string/auth_register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvAuthRegisterTitle"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etAuthRegisterNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/auth_register_text_input_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvAuthRegisterTitle">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAuthRegisterName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etAuthRegisterEmailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/auth_register_text_input_email"
            app:layout_constraintStart_toStartOf="@+id/etAuthRegisterNameLayout"
            app:layout_constraintEnd_toEndOf="@+id/etAuthRegisterNameLayout"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/etAuthRegisterNameLayout">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAuthRegisterEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etAuthRegisterPassLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/auth_register_text_input_password"
            app:layout_constraintStart_toStartOf="@+id/etAuthRegisterEmailLayout"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/etAuthRegisterEmailLayout">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAuthRegisterPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:id="@+id/tvAuthRegisterStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth_register_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btnAuthRegister"/>

    <Button
            android:text="@string/auth_register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAuthRegister"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>
