<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/clAuthLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.LoginFragment"
        android:layout_margin="@dimen/activity_margin">

    <TextView
            android:text="@string/auth_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvAuthLoginTitle"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etAuthLoginEmailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/auth_login_text_input_email"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="158dp"
            app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAuthLoginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etAuthLoginPassLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/auth_login_text_input_password"
            app:layout_constraintStart_toStartOf="@+id/etAuthLoginEmailLayout"
            android:layout_marginTop="23dp"
            app:layout_constraintTop_toBottomOf="@+id/etAuthLoginEmailLayout">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAuthLoginPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:id="@+id/tvAuthLoginStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth_login_title"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btnAuthLogin"/>

    <Button
            android:text="@string/auth_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAuthLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
